@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C2B2BD8F-A94E-4A15-BE60-A8B68CDA0795}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -65,6 +65,7 @@
     <Compile Include="Primitives\EvaluateFunction.cs" />
     <Compile Include="Primitives\IncludeSubroutine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Templates\Preprocessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AjLanguage\AjLanguage.csproj">
